<resources>
    <string name="app_name">CAR RENTAL</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_title">CITIES</string>
    <string name="spinner_bank">Banks</string>
    <string name="spinner_type">Type</string>
    <string name="spinner_hour">Hour</string>
    <string name="spinner_minute">Minute</string>
    <string name="spinner_model">Model</string>
    <string name="spinner_cost">Cost</string>
</resources>
