<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Adding Cars"
            android:layout_marginBottom="5dp"
            android:background="#979696"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Model:"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_car_model"
            android:prompt="@string/spinner_model"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="City:"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_car_city"
            android:prompt="@string/spinner_title"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Type:"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_car_type"
            android:prompt="@string/spinner_type"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Cost:"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_car_cost"
            android:prompt="@string/spinner_cost"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:id="@+id/btn_update"
            android:onClick="addCar" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/admin_logout"
            android:onClick="logOut"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="LogFile"
            android:id="@+id/admin_log"
            android:onClick="logFile"/>
    </LinearLayout>
</ScrollView>